formatted code + rename page title

--- a/review-form_light-version/src/index.css
+++ b/review-form_light-version/src/index.css
@@ -27,7 +27,7 @@ p {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  --border-color: #DCDCDC;
+  --border-color: #dcdcdc;
   --placeholder-font-color: #909090;
   --font-color: #404040;
   --active-background-color: #1e64b7;
