--- a/Words/src/components/wordForm/WordForm.module.scss
+++ b/Words/src/components/wordForm/WordForm.module.scss
@@ -1,15 +1,18 @@
+@use "../../helpers/mixins.scss" as *;
+@use "../../helpers/variables.scss" as *;
+
 .container {
-  background-color: #fff;
+  background-color: $container-bg-color;
+  border: $border;
   padding: 15px 20px;
 }
 
 .title {
+  @include alignItemsCenter;
   color: #364963;
   font-weight: 400;
   font-size: 30px;
   margin: 0;
-  display: flex;
-  align-items: center;
 }
 
 .inputContainer {
@@ -20,13 +23,20 @@
 }
 
 .textInputContainer {
-  display: flex;
+  @include alignItemsCenter;
+  justify-content: space-between;
   max-width: 40%;
   width: 100%;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .input {
   padding: 10px;
+}
+
+.line {
+  border-top: $border;
+}
+
+.buttons {
+  margin-top: 20px;
 }
